# game-of-life-pattern-RL-gym

./: .gitignore  README.md  agent.json  agent.pth  benchmark_evolutionary_20251113_212437.json  benchmark_evolutionary_20251113_212437_summary.txt  benchmark_evolutionary_20251116_132144.json  benchmark_evolutionary_20251116_132144_summary.txt  benchmark_evolutionary_20251116_135640.json  benchmark_evolutionary_20251116_135640_summary.txt  benchmark_evolutionary_20251116_142803.json  benchmark_evolutionary_20251116_142803_summary.txt  benchmark_evolutionary_20251117_081047.json  benchmark_evolutionary_20251117_081047_summary.txt  generate_target_patterns.py  integrated_RL_example.py  main.py  pyproject.toml  rl_GoL_env_gym.py  simple_agent.pth  target_patterns.json  test_env.py  test_saved_agent.py
