[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-ca-gym"
version = "0.1.0"
description = "CLI Reinforcement Learning Game of Life environment"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.2", 
    "gymnasium>=0.29.1",
    "numpy>=1.26.0",
    "scipy>=1.10.0",
    "matplotlib>=3.8.0",    
    "tqdm>=4.66.0"         
]